--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <header class="relative pt-32 pb-20 lg:pt-44 lg:pb-32 bg-slate-900 text-white overflow-hidden">
         <div class="absolute inset-0 z-0 opacity-40">
-            <img src="https://images.unsplash.com/photo-1636964732082-c26205b090ea?q=80&w=1920&auto=format&fit=crop" 
+            <img src="resta-travel-car (3).png" 
                  alt="Travel Palembang Lampung Murah Armada HiAce" class="w-full h-full object-cover scale-105">
         </div>
         <div class="absolute inset-0 bg-gradient-to-t from-slate-900 via-slate-900/70 to-blue-900/40 z-0"></div>
@@ -666,3 +666,4 @@
 </body>
 
 </html>
+
